# adventofcode2021

rust/adventofcode/: Cargo.toml  solution.rs.skel
rust/adventofcode/src/: args.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  main.rs  point.rs
