[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Bobby R. Ward <bobbyrward@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
im = "15"
itertools = "0.10"
regex = "1"
lazy_static = "1"

[dev-dependencies]
tracing-test = "0.2"
pretty_assertions = "1"
